<resources>
    <string name="app_name">Bio Products</string>
    <string name="title_login_fragment">Register</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="ed_login_email">Email</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="fragment_img_left">move to register fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="retype_password">Re-type Password</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="radio_button_check_producer">Producer</string>
    <string name="radio_button_check_client">Client</string>

    <string name="error_email_empty">Enter an Email</string>
</resources>